webpack 搭建 dev serve

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script type="module">
-      import hh from "../dist/index.js";
-      console.log(hh);
-    </script>
+    <noscript>your browser do not support javascript!</noscript>
   </body>
 </html>
