--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <noscript>your browser do not support javascript!</noscript>
+    <div id="root"></div>
   </body>
 </html>
